--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/passport-kakao": "^1.0.3",
     "axios": "^1.7.9",
+    "cookie-parser": "^1.4.7",
     "dayjs": "^1.11.13",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
