--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
             cd ~/astorverse-api
             git fetch origin
             git reset --hard origin/main
+            sudo docker compose down
             sudo docker compose pull
             sudo docker compose up -d
           EOF
+
