--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,10 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.HOST }} << EOF
-            cd ~/astorverse-api
+            cd ~/astor-api
             git fetch origin
             git reset --hard origin/main
             sudo docker compose down
             sudo docker compose pull
             sudo docker compose up -d
           EOF
-
