--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   api:
-    container_name: astorverse-api
+    container_name: astor-api
     restart: always
     image: node:20.11.0
     working_dir: /usr/src/app
